<resources>

    <string name="app_name">云盾</string>
    <!-- splash -->
    <string name="splash_one_item_pass">跳过</string>
    <string name="splash_one_item_1">心率自动监测</string>
    <string name="splash_one_item_2">智能记步，准确了解运动\n量自动计算里程和卡路里</string>
    <string name="splash_one_item_3">24小时全天候\n实时了解健康状态</string>
    <string name="splash_two_item_1">智能闹钟\n根据人体睡眠特征\n唤醒每一天</string>
    <string name="splash_two_item_2">蓝牙4.0技术\n手机电量消耗极少</string>
    <string name="splash_two_item_3">来电提醒\n与手机联系人同步\n过滤骚扰电话</string>
    <string name="splash_enter">开始使用</string>
    <!-- setting -->
    <string name="setting_bluetooth">打开手机蓝牙</string>
    <string name="setting_pre">上一步</string>
    <string name="setting_next">下一步</string>
    <string name="setting_bracelet">打开蓝牙设备</string>
    <string name="setting_bracelet_tips">长按蓝牙设备上的触摸点5秒，直到屏幕变亮</string>
    <string name="setting_device">手机与蓝牙设备正在配对</string>
    <string name="setting_device_search">正在搜索蓝牙设备</string>
    <string name="setting_device_search_repeat">重新搜索蓝牙设备</string>
    <string name="setting_device_select_tips">请选择蓝牙设备</string>
    <string name="setting_device_search_confirm">确认</string>
    <string name="setting_device_conn_success">配对成功</string>
    <string name="setting_device_conn_failure">配对失败</string>
    <string name="setting_userinfo_name_hint">昵称</string>
    <string name="setting_userinfo_sex">性别</string>
    <string name="setting_userinfo_birthday">年龄</string>
    <string name="setting_userinfo_height">身高</string>
    <string name="setting_userinfo_height_unit">cm</string>
    <string name="setting_userinfo_weight">体重</string>
    <string name="setting_userinfo_weight_unit">kg</string>
    <string name="setting_userinfo_name_not_null">昵称不能为空！</string>
    <string name="setting_userinfo_weight_not_null">体重不能为空！</string>
    <string name="setting_userinfo_height_not_null">身高不能为空！</string>
    <string name="setting_userinfo_height_size">身高应在100-200cm范围内</string>
    <string name="setting_userinfo_weight_size">体重应在30-150kg范围内</string>
    <string name="setting_userinfo_age_size">年龄应在5-99岁范围内</string>
    <string name="setting_target_title">设置目标</string>
    <string name="setting_target_relaxed">轻松</string>
    <string name="setting_target_recommend">推荐</string>
    <string name="setting_target_active">活跃</string>
    <string name="setting_target_step">步</string>
    <string name="setting_target_calorie">千卡</string>
    <string name="setting_target_calorie_unit">卡路里</string>
    <string name="setting_target_tips">建议：每天运动10000步是积极健康的生活方式</string>
    <string name="setting_target_amount_to">相当于</string>
    <string name="setting_target_minutes">%1$s分钟</string>
    <string name="setting_target_finish">完成</string>
    <string name="setting_target_min">请设置目标值</string>

    <!-- main -->
    <string name="main_tab_step">计步</string>
    <string name="main_tab_sleep">睡眠</string>
    <string name="main_tab_run">跑步</string>
    <string name="main_conn_tips">当前未连接蓝牙设备，请点击进行连接</string>
    <string name="main_exit_tips">是否确定退出应用？</string>
    <string name="main_exit_tips_confirm">确定</string>
    <string name="main_exit_tips_cancel">取消</string>
    <!-- step -->
    <string name="step_syncdata_waiting">正在同步数据…</string>
    <string name="step_history">历史</string>
    <string name="step_duration">用时</string>
    <string name="step_distance">距离</string>
    <string name="step_duration_unit">%1$s时%2$s分</string>
    <string name="step_distance_unit">公里</string>
    <string name="step_heart_rate_unit">/分</string>
    <!-- mycenter -->
    <string name="center_title">个人中心</string>
    <string name="center_name">昵称</string>
    <string name="center_info">个人信息</string>
    <string name="center_info_tips">个人的性别年龄等信息</string>
    <string name="center_target">设置运动目标</string>
    <string name="center_target_tips">设定每日的运动目标，包括步数、卡路里等</string>
    <string name="center_clear">清空数据</string>
    <string name="center_clear_tips">清空APP和蓝牙设备中的运动数据</string>
    <string name="center_body_data">身体档案</string>
    <string name="center_body_data_tips">查看身体的各项数据指标变化</string>
    <string name="center_local_match">同城约战</string>
    <string name="center_local_match_tips">可与附近小伙伴相约球场以球会友</string>
    <string name="center_news">足球资讯</string>
    <string name="center_news_tips">浏览足球最新资讯，掌握足球大事</string>
    <string name="center_store">体育商城</string>
    <string name="center_store_tips">挑选各类高品质运动装备</string>
    <string name="center_wonder_collection">精彩集锦</string>
    <string name="center_wonder_collection_tips">不容错过的足球短视频</string>
    <string name="center_competition_live">赛事直播</string>
    <string name="center_competition_live_tips">实时体育赛事直播尽在掌握之中</string>

    <!-- clear -->
    <string name="clear_title">清除数据</string>
    <string name="clear_bracelet">清空蓝牙设备</string>
    <string name="clear_phone">清空手机</string>
    <string name="clear_tips">是否确定清空数据？</string>
    <string name="clear_tips_confirm">确定</string>
    <string name="clear_tips_cancel">取消</string>
    <string name="clear_fail_conn_device">请先连接蓝牙设备！</string>
    <string name="clear_success">清除成功！</string>
    <!-- userinfo -->
    <string name="userinfo_title">个人信息</string>
    <string name="userinfo_confirm">确认</string>
    <string name="userinfo_name_hint">昵称</string>
    <string name="userinfo_sex">性别</string>
    <string name="userinfo_birthday">年龄</string>
    <string name="userinfo_height">身高</string>
    <string name="userinfo_height_unit">厘米</string>
    <string name="userinfo_weight">体重</string>
    <string name="userinfo_weight_unit">公斤</string>
    <string name="userinfo_name_not_null">昵称不能为空！</string>
    <string name="userinfo_weight_not_null">昵称不能为空！</string>
    <string name="userinfo_height_not_null">昵称不能为空！</string>
    <string name="userinfo_height_size">身高应在100-200cm范围内</string>
    <string name="userinfo_weight_size">体重应在30-150kg范围内</string>
    <string name="userinfo_age_size">年龄应在5-99岁范围内</string>
    <!-- target -->
    <string name="target_title">设置目标</string>
    <!-- left -->
    <string name="alert_low_battery">低电量提醒</string>
    <string name="alert_low_battery_tips">蓝牙设备电量低于25%时，进行提醒</string>
    <string name="alert_find_band">寻找蓝牙设备</string>
    <string name="alert_find_band_tips">连接蓝牙设备后，可让蓝牙设备一直震动</string>
    <string name="alert_find_band_conn_false">请先连接蓝牙设备！</string>
    <string name="alert_coming_call">来电提醒</string>
    <string name="alert_coming_call_open">开</string>
    <string name="alert_coming_call_close">关</string>
    <string name="alert_coming_call_tips">手机来电时，蓝牙设备进行提醒</string>
    <string name="alert_alarm">闹钟提醒</string>
    <string name="alert_alarm_tips">设置蓝牙设备闹钟提醒时间</string>
    <string name="bind_bracelet">绑定蓝牙设备</string>
    <string name="bind_bracelet_tips">进入配对和绑定蓝牙设备的设置</string>
    <string name="bracelet_reset">恢复出厂设置</string>
    <string name="bracelet_reset_tips">将所有配置信息恢复到出厂设置</string>
    <string name="bracelet_reset_alert">是否确定清空手机的所有设置？</string>
    <string name="bracelet_reset_alert_confirm">确定</string>
    <string name="bracelet_reset_alert_cancel">取消</string>
    <string name="about">关于</string>
    <!-- phone_coming -->
    <string name="phone_coming_alert_title">来电提醒</string>
    <string name="phone_coming_alert">手机来电提醒</string>
    <string name="phone_coming_alert_contacts">只允许联系人来电</string>
    <string name="phone_coming_nodisturb_time">设置来电勿扰时段</string>
    <string name="phone_coming_nodisturb_start_time">开始时间</string>
    <string name="phone_coming_nodisturb_end_time">结束时间</string>
    <string name="phone_coming_nodisturb_to">至</string>

    <!-- alarm -->
    <string name="alarm_title">闹钟</string>
    <string name="alarm_edit">编辑闹钟</string>
    <string name="alarm_del">删除</string>
    <string name="alarm_del_tips">请选择删除的闹钟！</string>
    <string name="alarm_del_dialog">确定是否删除？</string>
    <string name="alarm_del_confirm">确定</string>
    <string name="alarm_del_cancel">取消</string>
    <string name="alarm_finish">完成</string>
    <string name="alarm_add">添加闹钟</string>
    <string name="alarm_add_hint">闹钟名称</string>
    <string name="alarm_add_time">时间</string>
    <string name="alarm_add_name_null">闹钟名称不能为空！</string>
    <string name="alarm_add_count_max">最多可添加5个闹钟！</string>
    <string name="alarm_add_success">添加成功！</string>
    <string name="alarm_awaken">智能唤醒</string>
    <string name="alarm_awaken_tips">允许闹钟在目标时间之前30分钟将我从浅睡状态唤醒</string>
    <!-- device -->
    <string name="bind_title">绑定蓝牙设备</string>
    <string name="bind_finish">完成</string>
    <string name="bind_refresh">刷新</string>
    <!-- about -->
    <string name="about_title">关于</string>
    <string name="about_app">APP版本</string>
    <string name="about_firmware">蓝牙设备固件</string>
    <string name="about_company">北京守护佳原科技发展公司</string>
    <string name="about_company_english">moko technology limited</string>
    <!-- pull -->
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在同步数据…</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">获取更多…</string>
    <string name="pull_to_refresh_from_bottom_pull_without_data_label">亲，已经是最后一页了</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>

    <!-- history -->
    <string name="history_step">步数</string>
    <string name="history_step_daily">日均步数</string>
    <string name="history_step_sum">总步数</string>
    <string name="history_step_unit">步</string>
    <string name="history_calorie">体能</string>
    <string name="history_calorie_daily">日均体能</string>
    <string name="history_calorie_sum">总体能</string>
    <string name="history_calorie_unit">卡路里</string>
    <string name="history_distance">奔跑距离</string>
    <string name="history_distance_daily">日均距离</string>
    <string name="history_distance_sum">总距离</string>
    <string name="history_distance_unit">公里</string>
    <string name="history_power">力量</string>
    <string name="history_power_daily">日均力量</string>
    <string name="history_power_sum">总力量</string>
    <string name="history_power_unit">N</string>
    <string name="history_explosive">爆发力</string>
    <string name="history_explosive_daily">日均爆发力</string>
    <string name="history_explosive_sum">总爆发力</string>
    <string name="history_explosive_unit">P</string>
    <string name="history_endurance">耐力</string>
    <string name="history_endurance_daily">日均耐力</string>
    <string name="history_endurance_sum">总耐力</string>
    <string name="history_endurance_unit">E</string>
    <string name="history_spirit">精神</string>
    <string name="history_spirit_daily">日均精神</string>
    <string name="history_spirit_sum">总精神</string>
    <string name="history_spirit_unit">S</string>
    <string name="history_today">今天</string>
    <string name="history_yesterday">昨天</string>
    <string name="syn_success">同步成功</string>
    <string name="syn_tips">长按蓝牙设备触点5秒，点击“下一步”，进行自动连接，如不成功请点击“上一步”，重复此操作</string>
    <string name="syn_tips_2">长按蓝牙设备触点5秒，点击“完成”，进行自动连接，如不成功请重复此操作</string>
    <!-- sport -->
    <string name="speed">速度</string>
    <string name="explosive">爆发力</string>
    <string name="endurance">耐力</string>
    <string name="spirit">精神</string>
    <string name="power">力量</string>
    <string name="main_title">我的数据</string>
    <string name="sport_steps">奔跑步数</string>
    <string name="sport_distance">奔跑距离</string>
    <string name="sport_calorie">消耗体能</string>
    <string name="sport_bmi">BMI</string>
    <string name="sport_bfr">BFR</string>
    <string name="sport_bmr">BMR</string>
</resources>