<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/grey_f4f4f4">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_title"
            android:textColor="@color/black_333333"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/about_header_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="17dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/about_app"
            android:textColor="@color/grey_666666"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/grey_999999"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/divider_line"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="17dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/about_firmware"
            android:textColor="@color/grey_666666"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_about_firmware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="v42.1513.12"
            android:textColor="@color/grey_999999"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/divider_line"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:padding="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/about_company"
            android:textColor="@color/black_333333"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/about_company_english"
            android:textColor="@color/grey_2b2b2b"
            android:textSize="10sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>